# sungrowlib

./: Architecture.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/sungrowlib/: AsyncModbusClient.py  HttpTransport.py  PymodbusTransport.py  __init__.py  deserialization.py  factory.py  modbus_connection_base.py  modbus_types.py  signal_def.py  transport.py  transport_http.py  transport_pymodbus.py  types.py  util.py
src/sungrowlib/clients/: AsyncModbusClient.py  HttpTransport.py  PymodbusTransport.py  transport.py
src/sungrowlib/private/: deserialization.py  factory.py  generate_query_batches.py  signal_helpers.py
src/sungrowlib/transports/: AsyncModbusTransport.py  HttpTransport.py  PymodbusTransport.py  __init__.py  factory.py
tests/: __init__.py  simulation.py  test_init.py
