[project]
name = "sungrowlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Lanin", email = "alex@lanin.de" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "pymodbus>=3.8.6",
    "result>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pytest>=8.3.5",
]
