[project]
name = "sungrowlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexander Lanin", email = "alex@lanin.de" }]
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.11.0", "pymodbus>=3.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "basedpyright>=1.29.1",
  "pytest-asyncio>=0.26.0",
  "pytest-xdist>=3.6.0",
  "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Future default behavior of pytest-asyncio:
asyncio_default_fixture_loop_scope = "function"
